# SMF

./: README
CB/: MathEngine.cbp  MathEngine.workspace
Exemplos/Testes/: README.txt
Gamecore/: SGFlin.h  SMF.h  SMF_Config.h  SMF_Types.h
Gamecore/exceptions/: .directory  SMF_Error.h  SMF_Exception.h  SMF_LoadException.h  all.h
Gamecore/geometry/: SMF_2DAABBox.h  SMF_2DCircle.h  SMF_2DCircleSector.h  SMF_2DCircleSegment.h  SMF_2DConics.h  SMF_2DDrawVert.h  SMF_2DEllipse.h  SMF_2DLine.h  SMF_2DLineSegment.h  SMF_2DParabola.h  SMF_2DPoint.h  SMF_2DPointHom.h  SMF_2DRay.h  SMF_2DTriangle.h  SMF_2Dpolygon.h  SMF_AABBox.h  SMF_Circle.h  SMF_DrawVert.h  SMF_GeoDefs.h  SMF_Line.h  SMF_LineSegment.h  SMF_OBBox.h  SMF_Plane.h  SMF_Polygon.h  SMF_Polyhedron.h  SMF_Ray.h  SMF_Sphere.h  SMF_Triangle.h  SMF_TriangleMesh.h  all.h
Gamecore/math/: SMF_Complex.h  SMF_Curve.h  SMF_EulerAngles.h  SMF_Extrapolate.h  SMF_Interpolation.h  SMF_JointTransform.h  SMF_Lincp.h  SMF_Mat3D.h  SMF_Math.h  SMF_MathDefs.h  SMF_MathTempl.h  SMF_Matriz.h  SMF_Odife.h  SMF_Pluecker.h  SMF_Polynomial.h  SMF_Quaternion.h  SMF_Regression.h  SMF_Rotation.h  SMF_Simd.h  SMF_Simd3DNow.h  SMF_SimdAVX.h  SMF_SimdGeneric.h  SMF_SimdMMX.h  SMF_SimdSSE.h  SMF_SimdSSE2.h  SMF_SimdSSE3.h  SMF_SimdSSE41.h  SMF_SimdSSE42.h  SMF_Transforms.h  SMF_Vector.h  all.h
Gamecore/structures/: SMF_BTree.h  SMF_HashTableFast.h  SMF_List.h  all.h
Gamecore/sys/: SMF_HalfFloat.hpp  SMF_System.h  all.h
Gamecore/util/: SMF_ArgsCmdLine.h  SMF_Debug.h  SMF_HashUtils.h  SMF_Heap.h  SMF_HeapBlockAloc.h  SMF_PlaneList.h  SMF_Random.h  SMF_RandomLCG.h  SMF_StringUtils.h  SMF_TestLib.h  SMF_UtilStructs.h  all.h
Source/: .directory
Source/exceptions/: CMakeLists.txt  SMF_Error.cpp  SMF_Exception.cpp  SMF_LoadException.cpp
Source/geometry/: SMF_2DAABBox.cpp  SMF_2DCircle.cpp  SMF_2DCircleSector.cpp  SMF_2DCircleSegment.cpp  SMF_2DConics.cpp  SMF_2DEllipse.cpp  SMF_2DLine.cpp  SMF_2DLineSegment.cpp  SMF_2DParabola.cpp  SMF_2DPoint.cpp  SMF_2DPolygon.cpp  SMF_2DRay.cpp  SMF_2DTests.cpp  SMF_2DTriangle.cpp  SMF_AABBox.cpp  SMF_Circle.cpp  SMF_DrawVert.cpp  SMF_Geodefs.cpp  SMF_Line.cpp  SMF_LineSegment.cpp  SMF_OBBox.cpp  SMF_Plane.cpp  SMF_Polygon.cpp  SMF_Polyhedron.cpp  SMF_Ray.cpp  SMF_Sphere.cpp  SMF_Triangle.cpp  SMF_TriangleMesh.cpp
Source/math/: CMakeLists.txt  SMF_Complex.cpp  SMF_EulerAngles.cpp  SMF_JointTransform.cpp  SMF_Lcp.cpp  SMF_Math.cpp  SMF_Matriz.cpp  SMF_Ode.cpp  SMF_Pluecker.cpp  SMF_Polynomial.cpp  SMF_Quat.cpp  SMF_Regression.cpp  SMF_Rotation.cpp  SMF_Simd.cpp  SMF_SimdTestMatriz.cpp  SMF_SimdTestPlane.cpp  SMF_SimdTestQuat.cpp  SMF_Simd_3DNow.cpp  SMF_Simd_Generic.cpp  SMF_Simd_MMX.cpp  SMF_Simd_MMXMingw.cpp  SMF_Simd_SSE.cpp  SMF_Simd_SSE2.cpp  SMF_Simd_SSE2Mingw.cpp  SMF_Simd_SSE3.cpp  SMF_Simd_SSE3MinGw.cpp  SMF_Simd_SSE41.cpp  SMF_Simd_SSE42.cpp  SMF_Simd_SSEAVX.cpp  SMF_Simd_SSEComon.cpp  SMF_Simd_SSEMinGw.cpp  SMF_Transform.cpp  SMF_Vector.cpp  TriangleMesh_IntersectRay_AVX.inl  TriangleMesh_IntersectRay_SSE.inl
Source/math/.svn/: all-wcprops
Source/structures/: SMF_HashTableFast.cpp
Source/sys/: CMakeLists.txt  SMF_System.cpp  SMF_SystemMinGW.cpp
Source/sys/linux/: SGF_Fpu.cpp  SGF_LinCpu.cpp  SGF_LinShared.cpp
Source/sys/win32/: SMF_Fpu.cpp  SMF_FpuMingw.cpp  SMF_WinCpu.cpp  SMF_WinCpuMingw.cpp  SMF_WinDazMingw.cpp  SMF_WinShared.cpp
VC/: MathEngine.sln  MathEngine.vcxproj  MathEngine.vcxproj.filters
(+89 files in other folders)
